--- a/portfolio.html
+++ b/portfolio.html
@@ -2,7 +2,7 @@
 <html lang="ru">
   <head>
     <meta charset="UTF-8" />
-    <meta name="viewport" content="width=, initial-scale=1.0" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
     <link
       href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap"
@@ -16,7 +16,7 @@
     <header class="header-dec">
       <div class="container">
       <div class="main-div">
-        <!--почему если не задать наву сласс маин-див дисплей флекс не работает?-->
+        <!--почему если не задать наву класс маин-див дисплей флекс не работает?-->
         <nav class="main-div">
           <a href="./index.html" class="nav" aria-label="логотип"><span class="accent-logo" lang="en">Web</span><span
               class="logo" lang="en">Studio</span></a>
@@ -56,7 +56,8 @@
       <section class="button-section">
     <div class="container">
         <ul class="button">
-          <li class="title"><button type="button" class="but">Все</button></li>
+          <li class="title">
+            <button type="button" class="but">Все</button></li>
           <li class="title">
             <button type="button" class="but">Веб-сайты</button>
           </li>
@@ -156,7 +157,7 @@
               width="370"
               height="294"
             />
-            <h2 class="title">Проект <span lang="en">LAB</span></h2>
+            <h2 class="title">Проект</h2>
             <p class="text-elem">Маркетинг</p>
             <p></p>
           </li>
