--- a/index.html
+++ b/index.html
@@ -111,9 +111,9 @@
         </div>
       </section>
     
-      <!--about our work container-->
+      <!-- what-we-do container-->
       
-      <section>
+      <section class="about-work-section">
         <div class="container">
         <h2 class="section-title">Чем мы занимаемся</h2>
         <ul class="what-we-do-ul">
@@ -145,8 +145,10 @@
               width="270"
               height="260"
             />
+            <div class="team-padding">
             <h3 class="team">Игорь Демьяненко</h3>
             <p class="desc" lang="en">Product Designer</p>
+            </div>
           </li>
           <li class="our-team-li">
             <img
@@ -155,8 +157,10 @@
               width="270"
               height="260"
             />
+            <div class="team-padding">
             <h3 class="team">Ольга Репина</h3>
             <p class="desc" lang="en">Frontend Developer</p>
+            </div>
           </li>
           <li class="our-team-li">
             <img
@@ -165,8 +169,10 @@
               width="270"
               height="260"
             />
+            <div class="team-padding">
             <h3 class="team">Николай Тарасов</h3>
             <p class="desc" lang="en">Marketing</p>
+            </div>
           </li>
           <li class="our-team-li">
             <img
@@ -175,8 +181,10 @@
               width="270"
               height="260"
             />
+            <div class="team-padding">
             <h3 class="team">Михаил Ермаков</h3>
             <p class="desc" lang="en">UI Designer</p>
+            </div>
           </li>
         </ul>
       </div>
