--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <div class="container">
       <div class="main-div">
         <!--почему если не задать наву сласс маин-див дисплей флекс не работает?-->
-        <nav class="main-div">
+        <nav class="main-nav">
         <a href="./index.html" class="nav" aria-label="логотип"
           ><span class="accent-logo" lang="en">Web</span
           ><span class="logo" lang="en">Studio</span></a
