--- a/index.html
+++ b/index.html
@@ -76,8 +76,8 @@
           <li class="benefits">
             <h3 class="title">Внимание к деталям</h3>
             <p class="text">
-              Идейные соображения, а также <br />
-              начало повседневной работы по <br />
+              Идейные соображения, а также 
+              начало повседневной работы по 
               формированию позиции.
             </p>
           </li>
@@ -85,16 +85,16 @@
           <li class="benefits">
             <h3 class="title">Пунктуальность</h3>
             <p class="text">
-              Задача организации, в особенности <br />
-              же рамки и место обучения кадров <br />
+              Задача организации, в особенности 
+              же рамки и место обучения кадров 
               влечет за собой.
             </p>
           </li>
           <li class="benefits">
             <h3 class="title">Планирование</h3>
             <p class="text">
-              Равным образом консультация с <br />
-              широким активом в значительной <br />
+              Равным образом консультация с 
+              широким активом в значительной 
               степени обуславливает.
             </p>
           </li>
@@ -102,8 +102,8 @@
           <li class="benefits">
             <h3 class="title">Современные технологии</h3>
             <p class="text">
-              Значимость этих проблем настолько <br />
-              очевидна, что реализация плановых <br />
+              Значимость этих проблем настолько 
+              очевидна, что реализация плановых 
               заданий.
             </p>
           </li>
