--- a/portfolio.html
+++ b/portfolio.html
@@ -53,7 +53,7 @@
     
     <main>
      
-      <section class="button-section">
+      <section class="buttons-section">
     <div class="container">
         <ul class="button">
           <li class="title">
