--- a/portfolio.html
+++ b/portfolio.html
@@ -83,7 +83,7 @@
               height="294"
             />
             <div class="border-for-cards"> 
-            <h2 class="title">Технокряк</h2>
+            <h2 class="titles">Технокряк</h2>
             <p class="text-elem">Веб-сайт</p>
             <p></p>
             </div>
@@ -97,7 +97,7 @@
               height="294"
             />
             <div class="border-for-cards">
-            <h2 class="title">Постер <span lang="en">New Orlean vs Golden Star</span></h2>
+            <h2 class="titles">Постер <span lang="en">New Orlean vs Golden Star</span></h2>
             <p class="text-elem">Дизайн</p>
             <p></p>
             </div>
@@ -110,7 +110,7 @@
               height="294"
             />
             <div class="border-for-cards">
-            <h2 class="title">Ресторан <span lang="en">Seafood</span></h2>
+            <h2 class="titles">Ресторан <span lang="en">Seafood</span></h2>
             <p class="text-elem">Приложение</p>
             <p></p>
             </div>
@@ -125,7 +125,7 @@
               height="294"
             />
             <div class="border-for-cards">
-            <h2 class="title">Проект <span lang="en">Prime</span></h2>
+            <h2 class="titles">Проект <span lang="en">Prime</span></h2>
             <p class="text-elem">Маркетинг</p>
             <p></p>
             </div>
@@ -133,7 +133,7 @@
           <li class="features-li">
             <img src="./img/img-fi.jpg" alt="Boxes" width="370" height="294" />
           <div class="border-for-cards">
-            <h2 class="title">Проект <span lang="en">Boxes</span></h2>
+            <h2 class="titles">Проект <span lang="en">Boxes</span></h2>
             <p class="text-elem">Приложение</p>
             <p></p>
             </div>
@@ -146,7 +146,7 @@
               height="294"
             />
             <div class="border-for-cards">
-            <h2 class="title" lang="en">Inspiration has no Borders</h2>
+            <h2 class="titles" lang="en">Inspiration has no Borders</h2>
             <p class="text-elem">Веб-сайт</p>
             <p></p>
             </div>
@@ -160,7 +160,7 @@
               height="294"
             />
             <div class="border-for-cards">
-            <h2 class="title">Издание <span lang="en">Limited Edition</span></h2>
+            <h2 class="titles">Издание <span lang="en">Limited Edition</span></h2>
             <p class="text-elem">Дизайн</p>
             <p></p>
             </div>
@@ -173,7 +173,7 @@
               height="294"
             />
             <div class="border-for-cards">
-            <h2 class="title">Проект</h2>
+            <h2 class="titles">Проект</h2>
             <p class="text-elem">Маркетинг</p>
             <p></p>
             </div>
@@ -186,7 +186,7 @@
               height="294"
             />
             <div class="border-for-cards">
-            <h2 class="title" lang="en">Growing Business</h2>
+            <h2 class="titles" lang="en">Growing Business</h2>
             <p class="text-elem">Приложение</p>
             <p></p>
             </div>
